Работает: 1. Авторизация, выход из профиля, регистрация 2. Чтение и поиск объявлений 3. Создание объявлений 4. Функции редактирования и удаления объявлений для создателя Нет в версии: 1. Страницы со списком своих статей и откликами на них с возможностью поиска по откликам или по своим обявлениям 2. Страницы пользователя с возможностью редактирования профиля, удаления профиля, настройки уведомлений.

--- a/board/templates/post.html
+++ b/board/templates/post.html
@@ -21,7 +21,13 @@
                     <td>{{ post.dateCreation|date:"d.M.Y H:i" }}</td>
                 </h2>
             <tr>
-            <td>{{ post.text }}</td>
+            <h4><td>{{ post.text }}</td></h4>
+            {% if post.upload %}
+                <ul>
+                <img src="{{ MEDIA_URL }}{{ post.upload.url }}"/>
+<!--                    <li>{{ post.upload }}</li>-->
+                </ul>
+            {% endif %}
             {% if is_author %}
                 {% for comment in post.comment %}
                     <h2>
