--- a/board/templates/flatpages/default.html
+++ b/board/templates/flatpages/default.html
@@ -36,7 +36,7 @@
                        </li>
 <!--                       надо вставить сделать список во вьюхе, и шаблон, ми прописать в урл список своих постов\откликов-->
                        <li class="nav-item active">
-                           <a class="nav-link" href="/contacts/"></a>
+                           <a class="nav-link" href="/board/responses/">Отклики</a>
                        </li>
                        <li class="nav-item">
                                <a class="nav-link" href="/accounts/logout/">Вы зашли как: {{ request.user }} Нажмите чтобы выйти из профиля</a>
