--- a/board/templates/post.html
+++ b/board/templates/post.html
@@ -28,25 +28,28 @@
 <!--                    <li>{{ post.upload }}</li>-->
                 </ul>
             {% endif %}
-            {% if is_author %}
-                {% if post.response_set.all %}
-                    <table>
-                        <tr> <!— Добавляем строку —>
-                        <td>Автор</td>
-                        <td>Комментарий</td>
-                        <td>Дата</td>
+            {% if post.response_set.all %}
+                <table>
+                    <tr> <!— Добавляем строку —>
+                    <td>Автор</td>
+                    <td>Комментарий</td>
+                    <td>Дата</td>
 
-                        {% for response in post.response_set.all %}
+                    {% for response in post.response_set.all %}
+                        {% if response.status is True %}
                             <tr>
-                                <td>{{ response.text}}</td>
-                                <td>{{ response.dateCreation|date:"d.M.Y" }}</td>
+                                <td>{{ response.resp_author }}</td>
+                                <td>{{ response.resp_text}}</td>
+                                <td>{{ response.resp_dateCreation|date:"d.M.Y" }}</td>
                             </tr>
-                        {% endfor %}
-                        </tr> <!— Не забываем закрыть HTML-тег строки —>
-                    </table>
-                {% else %}
-                    <h3>Комментариев нет!</h3>
-                {% endif %}
+                        {% endif %}
+                    {% endfor %}
+                    </tr> <!— Не забываем закрыть HTML-тег строки —>
+                </table>
+            {% else %}
+                <h3>Комментариев нет!</h3>
+            {% endif %}
+            {% if post.author == request.user %}
                 <tr>
                     <td style="text-align: left;"> <a class="nav-link" href="/board/{{post.id}}/delete/">Удалить объявление? </a>
                     <td style="text-align: left;"> <a class="nav-link" href="/board/{{post.id}}/update/">Редактировать объявление </a>
@@ -54,7 +57,7 @@
             {% endif %}
 
         {% else %}
-            <h2>Новость еще готовится!</h2>
+            <h2>Объявление еще готовится!</h2>
         {% endif %}
 
 
